# cosmicpython-fastapi

./: LICENSE  README.md  lefthook.yml  pyproject.toml
.github/workflows/: black.yml  mypy.yml
